--- a/chat.css
+++ b/chat.css
@@ -7,6 +7,19 @@ body {
     padding: 0;
 }
 
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.back-button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+}
+
 header {
     padding: 20px;
 }
@@ -37,13 +50,23 @@ h1 {
 }
 
 .chat-container {
-    max-width: 600px;
-    margin: 0 auto;
+    max-width: 50%;
+    max-height: 500px;
+    margin: auto;
     background: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
 }
 
 .chat {
@@ -85,10 +108,12 @@ img {
 }
 
 input {
-    width: 80%;
-    padding: 10px;
+    width: 100%;
+    padding: 10px 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin-left: 60px;
+    margin-top: 100px;
 }
 
 #send-button {
@@ -98,9 +123,12 @@ input {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 10px; /* Lägg till detta för att skapa ett mellanrum mellan textfältet och knappen */
 }
 
 footer {
     color: #000;
     padding: 10px;
+    margin-left: 40%;
+    margin-top: 10%;
 }
