--- a/flirt.css
+++ b/flirt.css
@@ -2,17 +2,27 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background: linear-gradient(90deg, #faa669, #ff7eb5);
     text-align: center;
+    color: #000000;
+}
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.back-button a {
+    text-decoration: none;
     color: #fff;
-    margin: 0;
-    padding: 0;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .container {
-    max-width: 100%;
-    text-align: center;
-    background: #fff;
-    padding: 20px;
-    color: #ff7eb5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .header {
@@ -58,13 +68,17 @@ p {
 
 .flirt-form {
     width: 50%;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: 500px;
+    padding: 50px;
     background: #fff;
     border: 1px solid #fc98c3;
     border-radius: 5px;
-    text-align: left;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: 70px;
+}
+
+.flirt-form a {
+    text-decoration: none;
 }
 
 label, input, textarea {
@@ -80,15 +94,84 @@ input, textarea {
 }
 
 input[type="submit"] {
-    background: linear-gradient(90deg, #fc98c3, #f84995);
+    background-color: #ff7eb5;
+    color: #fff;
+    border: none;
+    padding: 15px 90px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+input[type="submit"]:hover {
+    background: linear-gradient(90deg, #fc98c3, #f39a5a74);
+    color: #000000;
+}
+
+footer {
+    margin-top: 30px;
+    font-size: smaller;
+}
+
+.video-container {
+    display: flex;
+    gap: 10px;
+    max-width: 800px;
+}
+
+.video {
+    width: 41%; 
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    color: #000;
+    cursor: pointer;
+}
+
+.popup-content p {
+    color: #000;
+}
+
+.popup-content button {
+    background-color: #ff7eb5;
     color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    margin-top: 10px;
 }
 
-input[type="submit"]:hover {
-    background: linear-gradient(90deg, #f84995, #fc98c3);
+.popup-content button:hover {
+    background: #faa669;
 }
