--- a/profiles.css
+++ b/profiles.css
@@ -7,6 +7,19 @@ body {
     padding: 0;
 }
 
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.back-button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+}
+
 .container {
     max-width: 100%;
     text-align: center;
@@ -89,10 +102,13 @@ h3 {
 
 .profile:hover .flirt-button {
     display: block;
+    background: #fc98c3;
+    color: #000000;
 }
 
 footer {
     color: #000000;
     position: absolute;
-    margin-top: 93%;
+    margin-top: 92%;
+
 }
