--- a/skapakonto.css
+++ b/skapakonto.css
@@ -8,6 +8,19 @@ body {
     color: #333;
 }
 
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.back-button a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+    font-size: 14px;
+}
+
 .container {
     max-width: 800px;
     margin: auto;
@@ -65,14 +78,12 @@ select#gender, select#smoking, select#drinking {
 }
 
 button {
-    width: 100%;
-    padding: 10px;
     background-color: #ff7eb5;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    padding: 15px 90px;
+    border-radius: 10px;
     cursor: pointer;
-    text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
 }
