--- a/preferences.css
+++ b/preferences.css
@@ -121,20 +121,20 @@ select {
     color: #000000;
 }
 
-input[type="submit"] {
-    background-color: #ff7eb5; 
-    color: #fff; 
+.profile-link input[type="button"] {
+    background-color: #ff7eb5;
+    color: #fff;
     border: none;
+    padding: 15px 50px;
     border-radius: 10px;
-    padding: 15px;
     cursor: pointer;
-    text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
+    display: block; /* Ensure the button takes up the full width */
+    margin: 0 auto; /* Center the button within its container */
 }
 
-input[type="submit"]:hover {
+.profile-link input[type="button"]:hover {
     background: linear-gradient(90deg, #fc98c3, #f39a5a74);
     color: #000000;
 }
-
